# python_embeddings_examples

./: CMakeLists.txt  README.md  build.sh  func.py  main.cpp  output  setup.py
src/function/: __init__.py
src/function.egg-info/: PKG-INFO  SOURCES.txt
